feat: link booking buttons to Telegram @maria_tymochko

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href="#services">Послуги</a>
           <a href="#approach">Підхід</a>
           <a href="#faq">Питання</a>
-          <a href="#contact" class="button primary">Запис</a>
+          <a href="https://t.me/maria_tymochko" target="_blank" rel="noopener" class="button primary">Запис</a>
         </nav>
       </div>
     </header>
