feat(hero): add portrait image with rounded corners and soft glow animation; add caption

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
       <section class="hero gradient-bg">
         <div class="container hero-inner">
           <div class="hero-text reveal">
+            <figure class="portrait reveal">
+              <img src="/images/IMG_5598.JPG" alt="Марія Тимочко" loading="lazy" decoding="async">
+              <figcaption>привіт!</figcaption>
+            </figure>
             <h1>Цілісний підхід до вашого здоров'я</h1>
             <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p>
             <div class="hero-cta">
