feat(hero): 3D flip on portrait with back message

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
         <div class="container hero-inner">
           <div class="hero-text reveal">
             <figure class="portrait reveal">
-              <img src="/images/IMG_5598.JPG" alt="Марія Тимочко" loading="lazy" decoding="async">
+              <button class="flip" type="button" aria-label="Перевернути фото" aria-pressed="false">
+                <div class="flip-inner">
+                  <div class="front">
+                    <img src="/images/IMG_5598.JPG" alt="Марія Тимочко" loading="lazy" decoding="async">
+                  </div>
+                  <div class="back" aria-hidden="true">
+                    <div class="back-card">Щиро вдячна що завітали!</div>
+                  </div>
+                </div>
+              </button>
             </figure>
             <h1>Цілісний підхід до вашого здоров'я</h1>
             <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p>
