feat(hero): socials under portrait; feat: confetti hover on booking button

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="#services">Послуги</a>
           <a href="#approach">Підхід</a>
           <a href="#faq">Питання</a>
-          <a href="https://t.me/maria_tymochko" target="_blank" rel="noopener" class="button primary">Запис</a>
+          <a href="https://t.me/maria_tymochko" target="_blank" rel="noopener" class="button primary" data-confetti="true">Запис</a>
         </nav>
       </div>
     </header>
@@ -44,6 +44,14 @@
                 </div>
               </button>
             </figure>
+            <div class="socials reveal" aria-label="Посилання на соціальні мережі">
+              <a class="social instagram" href="http://instagram.com/mariia__tym/" target="_blank" rel="noopener" aria-label="Instagram">
+                <img src="/images/instagram.svg" alt="" aria-hidden="true">
+              </a>
+              <a class="social telegram" href="https://t.me/maria_tymochko" target="_blank" rel="noopener" aria-label="Telegram">
+                <img src="/images/telegram.svg" alt="" aria-hidden="true">
+              </a>
+            </div>
             <h1>Цілісний підхід до вашого здоров'я</h1>
             <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p>
             <div class="hero-cta">
