feat(footer): add links (about, services, contacts, legal) and payment icons; style footer

--- a/index.html
+++ b/index.html
@@ -117,8 +117,21 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container">
-        <small>© <span id="year"></span> Марія Тимочко. Усі права захищено.</small>
+      <div class="container footer-inner">
+        <div class="footer-brand">
+          <small>© <span id="year"></span> Марія Тимочко. Усі права захищено.</small>
+        </div>
+        <nav class="footer-links" aria-label="Посилання у футері">
+          <a href="#about">Про лікаря</a>
+          <a href="#services">Послуги</a>
+          <a href="#contact">Контакти</a>
+          <a href="https://docs.google.com/document/d/REPLACE_WITH_YOUR_DOC_ID" target="_blank" rel="noopener">Правова згода</a>
+        </nav>
+        <div class="footer-payments" aria-label="Способи оплати">
+          <img src="/images/visa.svg" alt="Visa">
+          <img src="/images/mastercard.svg" alt="Mastercard">
+          <img src="/images/bitcoin.svg" alt="Bitcoin">
+        </div>
       </div>
     </footer>
 
