chore(footer): use Wikimedia-hosted official SVG logos for Visa, Mastercard, Bitcoin

--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
           <a href="https://docs.google.com/document/d/REPLACE_WITH_YOUR_DOC_ID" target="_blank" rel="noopener">Правова згода</a>
         </nav>
         <div class="footer-payments" aria-label="Способи оплати">
-          <img src="/images/visa.svg" alt="Visa">
-          <img src="/images/mastercard.svg" alt="Mastercard">
-          <img src="/images/bitcoin.svg" alt="Bitcoin">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_2014_logo.svg" alt="Visa">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="Mastercard">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Bitcoin.svg" alt="Bitcoin">
         </div>
       </div>
     </footer>
