--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               </button>
             </figure>
             <div class="socials reveal" aria-label="Посилання на соціальні мережі">
-              <a class="social instagram" href="http://instagram.com/mariia__tym/" target="_blank" rel="noopener" aria-label="Instagram">
+              <a class="social instagram" href="http://instagram.com/dr.mariia.tym/" target="_blank" rel="noopener" aria-label="Instagram">
                 <img src="/images/instagram.svg" alt="" aria-hidden="true">
               </a>
               <a class="social telegram" href="https://t.me/maria_tymochko" target="_blank" rel="noopener" aria-label="Telegram">
