style(contact): make links green for better contrast

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <img src="/images/telegram.svg" alt="" aria-hidden="true">
               </a>
             </div>
-            <h1>Цілісний підхід до вашого здоров'я</h1>
+            <h1>Комплексний підхід до твого здоров'я</h1>
             <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p>
             <div class="hero-cta">
               <a href="#services" class="button primary">Переглянути послуги</a>
