--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </a>
             </div>
             <h1>Комплексний підхід до твого здоров'я</h1>
-            <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p>
+            <!-- <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p> -->
             <div class="hero-cta">
               <a href="#services" class="button primary">Переглянути послуги</a>
               <a href="#about" class="button ghost">Дізнатися більше</a>
