--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <nav class="site-nav" aria-label="Головна навігація">
-          <a href="#about">Про лікаря</a>
+          <a href="#about">Про мене</a>
           <a href="#services">Послуги</a>
           <a href="#approach">Підхід</a>
           <a href="#faq">Питання</a>
@@ -65,7 +65,7 @@
       <section id="about" class="section">
         <div class="container">
           <div class="section-header reveal">
-            <h2>Про лікаря</h2>
+            <h2>Про мене</h2>
             <p>Кілька слів про досвід, освіту та цінності.</p>
           </div>
           <div class="content flow reveal" data-md-src="/content/about.md"></div>
@@ -122,7 +122,7 @@
           <small>© <span id="year"></span> Марія Тимочко. Усі права захищено.</small>
         </div>
         <nav class="footer-links" aria-label="Посилання у футері">
-          <a href="#about">Про лікаря</a>
+          <a href="#about">Про мене</a>
           <a href="#services">Послуги</a>
           <a href="#contact">Контакти</a>
           <a href="https://docs.google.com/document/d/REPLACE_WITH_YOUR_DOC_ID" target="_blank" rel="noopener">Правова згода</a>
