--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Про мене</h2>
-            <p>Кілька слів про досвід, освіту та цінності.</p>
+            <!-- <p>Кілька слів про досвід, освіту та цінності.</p> -->
           </div>
           <div class="content flow reveal" data-md-src="/content/about.md"></div>
         </div>
