--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
               </a>
             </div>
             <h1>Комплексний підхід до твого здоров'я</h1>
-            <!-- <p>М'яко, науково обґрунтовано і персоналізовано — для добробуту тіла і розуму.</p> -->
             <div class="hero-cta">
               <a href="#services" class="button primary">Переглянути послуги</a>
               <a href="#about" class="button ghost">Дізнатися більше</a>
@@ -66,7 +65,6 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Про мене</h2>
-            <!-- <p>Кілька слів про досвід, освіту та цінності.</p> -->
           </div>
           <div class="content flow reveal" data-md-src="/content/about.md"></div>
         </div>
@@ -76,7 +74,7 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Послуги</h2>
-            <p>Оберіть формат співпраці, що пасує саме вам.</p>
+            <p>Оберіть формат співпраці, що пасує саме тобі.</p>
           </div>
           <div class="cards">
             <article class="card reveal" data-md-src="/content/services/consultation.md"></article>
