feat(hero): two-column layout; left = portrait+buttons, right = stacked big title

--- a/index.html
+++ b/index.html
@@ -32,30 +32,42 @@
       <section class="hero gradient-bg">
         <div class="container hero-inner">
           <div class="hero-text reveal">
-            <figure class="portrait reveal">
-              <button class="flip" type="button" aria-label="Перевернути фото" aria-pressed="false">
-                <div class="flip-inner">
-                  <div class="front">
-                    <img src="/images/IMG_5598.JPG" alt="Марія Тимочко" loading="lazy" decoding="async">
-                  </div>
-                  <div class="back" aria-hidden="true">
-                    <div class="back-card">Щиро вдячна що завітали!</div>
-                  </div>
+            <div class="hero-grid">
+              <div class="hero-left">
+                <figure class="portrait">
+                  <button class="flip" type="button" aria-label="Перевернути фото" aria-pressed="false">
+                    <div class="flip-inner">
+                      <div class="front">
+                        <img src="/images/IMG_5598.JPG" alt="Марія Тимочко" loading="lazy" decoding="async">
+                      </div>
+                      <div class="back" aria-hidden="true">
+                        <div class="back-card">Щиро вдячна що завітали!</div>
+                      </div>
+                    </div>
+                  </button>
+                </figure>
+                <div class="socials" aria-label="Посилання на соціальні мережі">
+                  <a class="social instagram" href="http://instagram.com/dr.mariia.tym/" target="_blank" rel="noopener" aria-label="Instagram">
+                    <img src="/images/instagram.svg" alt="" aria-hidden="true">
+                  </a>
+                  <a class="social telegram" href="https://t.me/maria_tymochko" target="_blank" rel="noopener" aria-label="Telegram">
+                    <img src="/images/telegram.svg" alt="" aria-hidden="true">
+                  </a>
                 </div>
-              </button>
-            </figure>
-            <div class="socials reveal" aria-label="Посилання на соціальні мережі">
-              <a class="social instagram" href="http://instagram.com/dr.mariia.tym/" target="_blank" rel="noopener" aria-label="Instagram">
-                <img src="/images/instagram.svg" alt="" aria-hidden="true">
-              </a>
-              <a class="social telegram" href="https://t.me/maria_tymochko" target="_blank" rel="noopener" aria-label="Telegram">
-                <img src="/images/telegram.svg" alt="" aria-hidden="true">
-              </a>
-            </div>
-            <h1>Комплексний підхід до твого здоров'я</h1>
-            <div class="hero-cta">
-              <a href="#services" class="button primary">Переглянути послуги</a>
-              <a href="#about" class="button ghost">Дізнатися більше</a>
+                <div class="hero-cta">
+                  <a href="#services" class="button primary">Переглянути послуги</a>
+                  <a href="#about" class="button ghost">Дізнатися більше</a>
+                </div>
+              </div>
+              <div class="hero-right">
+                <h1>
+                  Комплексний<br>
+                  підхід<br>
+                  до<br>
+                  твого<br>
+                  здоров'я
+                </h1>
+              </div>
             </div>
           </div>
         </div>
