chore: remove FAQ section and nav item

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
           <a href="#about">Про мене</a>
           <a href="#services">Послуги</a>
           <a href="#approach">Підхід</a>
-          <a href="#faq">Питання</a>
           <a href="https://t.me/maria_tymochko" target="_blank" rel="noopener" class="button primary" data-confetti="true">Запис</a>
         </nav>
       </div>
@@ -61,7 +60,7 @@
                 </h1>
                 <br>
                 <div class="socials" aria-label="Посилання на соціальні мережі">
-                  <a class="social instagram" href="http://instagram.com/dr.mariia.tym/" target="_blank" rel="noopener" aria-label="Instagram">
+                  <a class="social instagram" href="http://instagram.com/dr.mariia.tym" target="_blank" rel="noopener" aria-label="Instagram">
                     <img src="/images/instagram.svg" alt="" aria-hidden="true">
                   </a>
                   <a class="social telegram" href="https://t.me/maria_tymochko" target="_blank" rel="noopener" aria-label="Telegram">
@@ -106,15 +105,7 @@
         </div>
       </section>
 
-      <section id="faq" class="section alt">
-        <div class="container">
-          <div class="section-header reveal">
-            <h2>Поширені питання</h2>
-            <p>Відповіді на те, що ви зазвичай питаєте.</p>
-          </div>
-          <div class="content flow reveal" data-md-src="/content/faq.md"></div>
-        </div>
-      </section>
+
 
       <section id="contact" class="section">
         <div class="container">
