update index.html, content

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Мій підхід</h2>
-            <p>Інтеграція доказової медицини, способу життя та профілактики.</p>
+            <p>Поєднання доказової медицини, поступових змін в способі життя задля стійкого позитивного результату.</p>
           </div>
           <div class="content flow reveal" data-md-src="/content/approach.md"></div>
         </div>
