--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Послуги</h2>
-            <p>Оберіть формат співпраці, що пасує саме тобі.</p>
+            <p>Обери формат співпраці, що пасує саме тобі.</p>
           </div>
           <div class="cards">
             <article class="card reveal" data-md-src="/content/services/consultation.md"></article>
