feat(contact): two-column layout with image on the right; mobile image full-width

--- a/index.html
+++ b/index.html
@@ -111,9 +111,15 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Контакти</h2>
-            <p>Запис на прийом і зворотний зв'язок.</p>
           </div>
-          <div class="content flow reveal" data-md-src="/content/contact.md"></div>
+          <div class="contact-grid">
+            <div class="contact-left reveal">
+              <div class="content flow" data-md-src="/content/contact.md"></div>
+            </div>
+            <figure class="contact-right reveal">
+              <img src="/images/IMG_2874.png" alt="Контакти — Марія Тимочко" loading="lazy" decoding="async">
+            </figure>
+          </div>
         </div>
       </section>
     </main>
