--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               <div class="content flow" data-md-src="/content/contact.md"></div>
             </div>
             <figure class="contact-right reveal">
-              <img src="/images/IMG_2874.png" alt="Контакти — Марія Тимочко" loading="lazy" decoding="async">
+              <img src="/images/IMG_2874.jpg" alt="Контакти — Марія Тимочко" loading="lazy" decoding="async">
             </figure>
           </div>
         </div>
