--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Персональна візитівка лікаря інтегративної медицини Марії Тимочко: консультації, супровід, підхід до здоров'я.">
 
     <link rel="stylesheet" href="/styles/main.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-45CDBRZ7G2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-45CDBRZ7G2');
+    </script>
   </head>
   <body>
     <header class="site-header">
