--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
       gtag('config', 'G-45CDBRZ7G2');
     </script>
+    <link rel="icon" href="/favicon.ico" sizes="any">
   </head>
   <body>
     <header class="site-header">
@@ -114,7 +115,18 @@
         </div>
       </section>
 
-
+      <section id="instagram" class="section alt">
+        <div class="container">
+          <div class="section-header reveal">
+            <h2>Instagram</h2>
+          </div>
+          <div class="insta-embed reveal">
+            <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/DG6Je2JtxS-/"
+              data-instgrm-version="14" style="background:#fff;border:0;margin:0 auto;max-width:540px;width:100%;">
+            </blockquote>
+          </div>
+        </div>
+      </section>
 
       <section id="contact" class="section">
         <div class="container">
@@ -153,6 +165,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script async src="https://www.instagram.com/embed.js"></script>
     <script type="module" src="/dist/main.js"></script>
   </body>
   </html>
