--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <a href="https://docs.google.com/document/d/REPLACE_WITH_YOUR_DOC_ID" target="_blank" rel="noopener">Правова згода</a>
         </nav>
         <div class="footer-payments" aria-label="Способи оплати">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/Visa_2014_logo.svg" alt="Visa">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/Visa_Inc._logo.svg" alt="Visa">
           <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/Mastercard-logo.svg" alt="Mastercard">
           <img src="https://upload.wikimedia.org/wikipedia/commons/4/46/Bitcoin.svg" alt="Bitcoin">
         </div>
