--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="container">
           <div class="section-header reveal">
             <h2>Послуги</h2>
-            <p>Обери формат співпраці, що імпонує саме тобі.</p>
+            <p>Обери формат співпраці, що імпонує саме тобі</p>
           </div>
           <div class="cards">
             <article class="card reveal" data-md-src="/content/services/consultation.md"></article>
